first platform games separation - integration test running